--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
-  "javacc-5.0src.tar.gz": 41159a705cf118f8e8c687a2fe2e923361ab35f7
+  javacc-5.0src.tar.gz: 41159a705cf118f8e8c687a2fe2e923361ab35f7
+
