--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  javacc-5.0src.tar.gz: 41159a705cf118f8e8c687a2fe2e923361ab35f7
+  "release_7_0_2.tar.gz":   dbae7ab6f8ab74d61da0dfb66a1a912e6a3a0586
